--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/pdfbox-app-3.0.0-alpha2.jar"/>
 	<classpathentry kind="lib" path="lib/pdfbox-3.0.0-alpha2.jar"/>
+	<classpathentry kind="lib" path="lib/java-json.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/apache-httpcomponents-httpcore.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/pdfbox-app-3.0.0-alpha2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
