--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry kind="lib" path="lib/apache-httpcomponents-httpcore.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/pdfbox-app-3.0.0-alpha2.jar"/>
+	<classpathentry kind="lib" path="lib/derby.jar"/>
+	<classpathentry kind="lib" path="lib/derbytools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
