--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/pdfbox-app-3.0.0-alpha2.jar"/>
 	<classpathentry kind="lib" path="lib/derby.jar"/>
 	<classpathentry kind="lib" path="lib/derbytools.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-5.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
